--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "astral"
+name = "lloth"
 version = "0.0.0"
 edition = "2018"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 license = "MIT OR Apache-2.0"
-documentation = "https://docs.rs/astral"
-homepage = "https://github.com/zakarumych/astral"
-repository = "https://github.com/zakarumych/astral"
+documentation = "https://docs.rs/lloth"
+homepage = "https://github.com/zakarumych/lloth"
+repository = "https://github.com/zakarumych/lloth"
 readme = "README.md"
 
 [features]
