Add missing dependency

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/zakarumych/lloth"
 readme = "../README.md"
 
 [features]
-tcp = ["tokio/net"]
+tcp = ["tokio/net", "futures-task"]
 
 [dependencies]
 alkahest = { version = "0.1", features = ["derive"] }
@@ -18,3 +18,4 @@ scoped-arena = "0.3"
 thiserror = "1.0"
 tokio = { version = "1.0", optional = true }
 tracing = "0.1"
+futures-task = { version = "0.3", optional = true }
