--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,5 @@ tokio = { version = "1.0", features = ["macros", "rt", "net", "time"] }
 
 [[examples.client_server]]
 required-features = ["tcp"]
+
+[workspace]
