--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ documentation = "https://docs.rs/lloth"
 homepage = "https://github.com/zakarumych/lloth"
 repository = "https://github.com/zakarumych/lloth"
 readme = "README.md"
+description = "Powerful netcode for hecs based game engines"
+categories = ["network-programming", "game-development"]
+keywords = ["netcode", "multiplayer", "authoritative-server", "hecs"]
 
 [features]
 tcp = ["tokio/net", "lloth-core/tcp"]
