--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,6 +8,9 @@ documentation = "https://docs.rs/lloth-core"
 homepage = "https://github.com/zakarumych/lloth"
 repository = "https://github.com/zakarumych/lloth"
 readme = "../README.md"
+description = "Core layer for client-server netcode"
+categories = ["network-programming", "game-development"]
+keywords = ["netcode", "multiplayer", "authoritative-server"]
 
 [features]
 tcp = ["tokio/net", "futures-task"]
