--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evoke"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 license = "MIT OR Apache-2.0"
@@ -20,7 +20,7 @@ client = []
 server = []
 
 [dependencies]
-evoke-core = { version = "0.1.0", path = "core" }
+evoke-core = { version = "=0.1.1", path = "core" }
 
 alkahest = { version = "0.1" }
 scoped-arena = "0.3"
@@ -41,3 +41,6 @@ tokio = { version = "1.0", features = ["macros", "rt", "net", "time"] }
 required-features = ["tcp"]
 
 [workspace]
+
+[package.metadata.docs.rs]
+all-features = true
