--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evoke-core"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 license = "MIT OR Apache-2.0"
@@ -22,3 +22,6 @@ thiserror = "1.0"
 tokio = { version = "1.0", optional = true }
 tracing = "0.1"
 futures-task = { version = "0.3", optional = true }
+
+[package.metadata.docs.rs]
+all-features = true
