--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evoke"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2018"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 license = "MIT OR Apache-2.0"
@@ -8,9 +8,9 @@ documentation = "https://docs.rs/evoke"
 homepage = "https://github.com/arcana-engine/evoke"
 repository = "https://github.com/arcana-engine/evoke"
 readme = "README.md"
-description = "Powerful netcode for hecs based game engines"
+description = "Powerful netcode for edict based game engines"
 categories = ["network-programming", "game-development"]
-keywords = ["netcode", "multiplayer", "authoritative-server", "hecs"]
+keywords = ["netcode", "multiplayer", "authoritative-server", "edict"]
 
 [features]
 tcp = ["tokio/net", "evoke-core/tcp"]
@@ -30,7 +30,7 @@ tracing = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
 bytemuck = "1.0"
-hecs = "0.7"
+edict = { version = "0.1" }
 bitsetium = "0.0"
 eyre = "0.6"
 
